# audio_midi_sync

./: .gitmodules  CMakeLists.txt
cmake/Modules/: FindPortaudio.cmake
src/: audio_io.cpp  audio_io.h  beat_tracker.cpp  beat_tracker.h  bpm_pd.cpp  bpm_pd.h  clock_osc.h  gpio.cpp  gpio.h  logger.h  main.cpp  midi.cpp  midi.h  serial.cpp  serial.h
